--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "vue-router": "^4.2.5"
   }
 }
