--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Naganathan M R",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
